# signalguard-aiops

./: README.md  init_sg_aiops.py  pyproject.toml
signalguard-aiops/signalguard_aiops/detectors/: base.py  ema.py
signalguard-aiops/signalguard_aiops/docs/: index.html
signalguard-aiops/signalguard_aiops/examples/: advanced_demo.py  recipe_error_rate_ensemble_synthetic.py  recipe_error_rate_prometheus.py  recipe_error_rate_synthetic.py  simple_prometheus_demo.py
signalguard-aiops/signalguard_aiops/incidents/: __init__.py  incident.py
signalguard-aiops/signalguard_aiops/pipelines/: __init__.py
signalguard-aiops/signalguard_aiops/recipes/: __init__.py  base.py  ensemble.py  latency.py
signalguard_aiops/: __init__.py
signalguard_aiops/detectors/: __init__.py  isolation_forest.py  lof.py  lstm_autoencoder.py  prophet_detector.py  zscore.py
signalguard_aiops/examples/: recipe_latency_slo_synthetic.py
signalguard_aiops/incidents/: scorers.py
signalguard_aiops/metrics/: timeseries.py
signalguard_aiops/pipelines/: prometheus_client.py
signalguard_aiops/recipes/: error_rate.py
tests/: test_zscore.py
